@@ -21,14 +21,14 @@ PKG_CHECK_MODULES(LIBRAPI2, librapi2 >= 0.14)
 dnl Check for librra
 PKG_CHECK_MODULES(LIBRRA, librra >= 0.14)
 
-PKG_CHECK_MODULES(GNOME2, glib-2.0       \
-			  gmodule-2.0    \
-			  gtk+-2.0 >= 2.12 \
-			  libgnome-2.0   \
-			  libgnomeui-2.0)
+PKG_CHECK_MODULES(GTK2, glib-2.0       \
+			gmodule-2.0    \
+			gtk+-2.0 >= 2.12)
 
-AC_SUBST(GNOME2_CFLAGS)
-AC_SUBST(GNOME2_LIBS)
+AC_SUBST(GTK2_CFLAGS)
+AC_SUBST(GTK2_LIBS)
+
+PKG_CHECK_MODULES(GCONF, gconf-2.0)
 
 AC_PATH_PROG(GCONFTOOL, gconftool-2)
 AM_GCONF_SOURCE_2
